# SDL3CPlusPlus

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt  renovate.json  workflow.patch
.github/workflows/: Dockerfile  package-release.yml  publish-container.yml  release.yml  upload-build-artifact.yml
config/: gui_runtime.json  seed_runtime.json  soundboard_runtime.json
scripts/: cube_logic.lua  dev_commands.py  fetch_act.py  gui.lua  gui_demo.lua  math3d.lua  package_release.py  setup_vendor_dependencies.py  soundboard.lua  workflow_doctor.py
shaders/: cube.vert  cube.vert.spv
src/: main.cpp
src/app/: audio_player.cpp  audio_player.hpp  sdl3_app.hpp  sdl3_app_buffers.cpp  sdl3_app_build.cpp  sdl3_app_core.cpp  sdl3_app_device.cpp  sdl3_app_pipeline.cpp  sdl3_app_render.cpp  sdl3_app_swapchain.cpp  trace.hpp  vulkan_api.cpp  vulkan_api.hpp  vulkan_cube_app.cpp  vulkan_cube_app.hpp
src/core/: math.hpp  vertex.hpp
src/gui/: gui_renderer.cpp  gui_renderer.hpp
src/script/: cube_script.cpp  cube_script.hpp
tests/: test_cube_script.cpp
tests/scripts/: unit_cube_logic.lua
